# lumiere

./: .ocamlformat  README.md  dune-project  lumiere.opam
doc/: dune  index.mld  lumiere.mld
lib/: camera.ml  color.ml  dune  geometry.ml  hitrecord.ml  hitrecord.mli  object.ml  object.mli  output.ml  ray.ml  render.ml  shape.ml
lib/entities/: camera.ml  camera.mli  dune  material.ml  material.mli  object.ml  object.mli  scene.ml  scene.mli
lib/numerical/: dune  hitrecord.ml  hitrecord.mli  ray.ml  ray.mli  utils.ml  utils.mli  vector.ml  vector.mli
lib/renderer/: color.ml  color.mli  dune  output.ml  output.mli  tracer.ml  tracer.mli
test/: dune  vector_test.ml
